# company

./: .gitignore  Cargo.toml  README.md  backup.sh  restore.sh
AI Assistant/: chat-13.01.2024-22.08.00.txt
meta/: dump.txt
scripts/: get_data.sh  rename_csv_fields
src/: company.rs  field_map.rs  lib.rs  main.rs  main_BACKUP.rs
