[package]
name = "company"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
sled = "0.34.7"
console = "0.15.7"
mongodb = "2.8.0"
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.30"
serde = "1.0.193"
serde_json = "1.0.108"

